--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,141 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-21 14:34:49 -0400 
+%% Created for Pete Su at 2023-07-21 19:09:12 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bader2013atoms,
+	author = {Bader, Richard FW and Matta, Ch{\'e}rif F},
+	date-added = {2023-07-21 19:09:07 -0400},
+	date-modified = {2023-07-21 19:09:12 -0400},
+	journal = {Foundations of Chemistry},
+	pages = {253--276},
+	publisher = {Springer},
+	title = {Atoms in molecules as non-overlapping, bounded, space-filling open quantum systems},
+	volume = {15},
+	year = {2013}}
+
+@article{Bach2013c,
+	author = {Bach, Roger and Pope, Damian and Liou, Sy-Hwang and Batelaan, Herman},
+	date-added = {2023-07-21 18:38:12 -0400},
+	date-modified = {2023-07-21 18:38:48 -0400},
+	journal = {New Journal of Physics},
+	note = {\href{https://arxiv.org/abs/1210.6243}{arxiv:1210.6243}},
+	number = {3},
+	pages = {033018},
+	publisher = {IOP Publishing},
+	title = {Controlled double-slit electron diffraction},
+	volume = {15},
+	year = {2013}}
+
+@book{Atkins2011,
+	author = {Atkins, Peter W and Friedman, Ronald S},
+	date-added = {2023-07-21 18:36:22 -0400},
+	date-modified = {2023-07-21 18:36:28 -0400},
+	publisher = {Oxford university press},
+	title = {Molecular quantum mechanics},
+	year = {2011}}
+
+@article{Aston2012,
+	author = {P. J. Aston},
+	date-added = {2023-07-21 18:34:41 -0400},
+	date-modified = {2023-07-21 18:35:16 -0400},
+	doi = {10.1209/0295-5075/97/52001},
+	journal = {EPL (Europhysics Letters)},
+	note = {\href{https://arxiv.org/abs/1204.5953}{arxiv:1204.5953}},
+	number = {5},
+	pages = {52001},
+	publisher = {IOP Publishing},
+	title = {Is radioactive decay really exponential?},
+	url = {https://doi.org/10.1209%2F0295-5075%2F97%2F52001},
+	volume = {97},
+	year = 2012,
+	bdsk-url-1 = {https://doi.org/10.1209%2F0295-5075%2F97%2F52001},
+	bdsk-url-2 = {https://doi.org/10.1209/0295-5075/97/52001}}
+
+@incollection{Ashtekar1999g,
+	author = {Ashtekar, Abhay and Schilling, Troy A},
+	booktitle = {On Einstein's Path: Essays in Honor of Engelbert Schucking},
+	date-added = {2023-07-21 18:30:45 -0400},
+	date-modified = {2023-07-21 18:31:33 -0400},
+	note = {\href{https://arxiv.org/abs/gr-qc/9706069}{arxiv:gr-qc/9706069}},
+	pages = {23--65},
+	publisher = {Springer},
+	title = {Geometrical formulation of quantum mechanics},
+	year = {1999}}
+
+@article{Fonda_1978,
+	author = {L Fonda and G C Ghirardi and A Rimini},
+	date-added = {2023-07-21 18:29:14 -0400},
+	date-modified = {2023-07-21 18:29:24 -0400},
+	doi = {10.1088/0034-4885/41/4/003},
+	journal = {Rep. Prog. Phys.},
+	number = {4},
+	pages = {587--631},
+	publisher = {{IOP} Publishing},
+	title = {Decay theory of unstable quantum systems},
+	url = {https://doi.org/10.1088%2F0034-4885%2F41%2F4%2F003},
+	volume = {41},
+	year = 1978,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0034-4885%2F41%2F4%2F003},
+	bdsk-url-2 = {https://doi.org/10.1088/0034-4885/41/4/003}}
+
+@article{Anastopoulos2018,
+	author = {Charis Anastopoulos},
+	date-added = {2023-07-21 18:26:38 -0400},
+	date-modified = {2023-07-21 18:27:11 -0400},
+	doi = {10.1007/s10773-018-3984-z},
+	journal = {Int J Theor Phys},
+	note = {\href{https://arxiv.org/abs/1808.03798}{arxiv:1808.03798}},
+	number = {3},
+	pages = {890--930},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Decays of Unstable Quantum Systems},
+	url = {https://doi.org/10.1007%2Fs10773-018-3984-z},
+	volume = {58},
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fs10773-018-3984-z},
+	bdsk-url-2 = {https://doi.org/10.1007/s10773-018-3984-z}}
+
+@article{Aharonov1959significance,
+	author = {Aharonov, Yakir and Bohm, David},
+	date-added = {2023-07-21 18:25:49 -0400},
+	date-modified = {2023-07-21 18:25:54 -0400},
+	journal = {Physical Review},
+	number = {3},
+	pages = {485},
+	publisher = {APS},
+	title = {Significance of electromagnetic potentials in the quantum theory},
+	volume = {115},
+	year = {1959}}
+
+@article{Aharonov1963,
+	author = {Aharonov, Y and Bohm, David},
+	date-added = {2023-07-21 18:25:05 -0400},
+	date-modified = {2023-07-21 18:25:11 -0400},
+	journal = {Physical Review},
+	number = {4},
+	pages = {1625},
+	publisher = {APS},
+	title = {Further discussion of the role of electromagnetic potentials in the quantum theory},
+	volume = {130},
+	year = {1963}}
+
+@article{Aharonov1961,
+	author = {Aharonov, Yakir and Bohm, David},
+	date-added = {2023-07-21 18:24:29 -0400},
+	date-modified = {2023-07-21 18:24:37 -0400},
+	journal = {Physical Review},
+	number = {4},
+	pages = {1511},
+	publisher = {APS},
+	title = {Further considerations on electromagnetic potentials in the quantum theory},
+	volume = {123},
+	year = {1961}}
 
 @book{Adler2004quantum,
 	author = {Adler, Stephen L},
@@ -2172,11 +2301,11 @@
 	year = {2018},
 	bdsk-url-1 = {https://doi.org/10.1093/bjps/axw004}}
 
-@article{Awodey:2018aa,
+@article{Awodey:2018a,
 	abstract = {The notion of a natural model of type theory is defined in terms of that of a representable natural transfomation of presheaves. It is shown that such models agree exactly with the concept of a category with families in the sense of Dybjer, which can be regarded as an algebraic formulation of type theory. We determine conditions for such models to satisfy the inference rules for dependent sums...], dependent products...]and intensional identity types , as used in homotopy type theory. It is then shown that a category admits such a model if it has a class of maps that behave like the abstract fibrations in axiomatic homotopy theory: They should be stable under pullback, closed under composition and relative products, and there should be weakly orthogonal factorizations into the class. It follows that many familiar settings for homotopy theory also admit natural models of the basic system of homotopy type theory.},
 	author = {Steve Awodey},
 	date-added = {2019-09-05 18:38:13 -0400},
-	date-modified = {2023-07-18 09:12:42 -0400},
+	date-modified = {2023-07-21 18:35:35 -0400},
 	isbn = {09601295},
 	journal = {Mathematical Structures in Computer Science},
 	keywords = {Mathematics--Computer Applications; Homotopy theory},
