--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,108 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-22 07:31:35 -0400 
+%% Created for Pete Su at 2023-07-22 21:33:35 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bialynicki1996v,
+	author = {Bialynicki-Birula, Iwo},
+	date-added = {2023-07-22 21:33:02 -0400},
+	date-modified = {2023-07-22 21:33:35 -0400},
+	journal = {Progress in optics},
+	note = {\href{https://arxiv.org/abs/quant-ph/0508202}{arxiv:quant-ph/0508202}},
+	pages = {245--294},
+	publisher = {Elsevier},
+	title = {{Photon Wave Function}},
+	volume = {36},
+	year = {1996}}
+
+@book{Bes_2012,
+	author = {Daniel Bes},
+	date-added = {2023-07-22 21:30:55 -0400},
+	date-modified = {2023-07-22 21:30:55 -0400},
+	doi = {10.1007/978-3-642-20556-9},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Quantum Mechanics},
+	url = {https://doi.org/10.1007%2F978-3-642-20556-9},
+	year = 2012,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-20556-9},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-20556-9}}
+
+@article{Berman_2010,
+	author = {P. R. Berman and G. W. Ford},
+	date-added = {2023-07-22 21:30:08 -0400},
+	date-modified = {2023-07-22 21:30:20 -0400},
+	doi = {10.1103/physreva.82.023818},
+	journal = {Phys. Rev. A},
+	number = {2},
+	publisher = {American Physical Society ({APS})},
+	title = {Spectrum in spontaneous emission: Beyond the Weisskopf-Wigner approximation},
+	url = {https://doi.org/10.1103%2Fphysreva.82.023818},
+	volume = {82},
+	year = 2010,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysreva.82.023818},
+	bdsk-url-2 = {https://doi.org/10.1103/physreva.82.023818}}
+
+@book{Bell2004,
+	author = {John Bell},
+	date-added = {2023-07-22 21:26:16 -0400},
+	date-modified = {2023-07-22 21:26:53 -0400},
+	doi = {10.1017/CBO9780511815676},
+	edition = {2},
+	place = {Cambridge},
+	publisher = {Cambridge University Press},
+	title = {Speakable and Unspeakable in Quantum Mechanics: Collected Papers on Quantum Philosophy},
+	year = {2004},
+	bdsk-url-1 = {https://doi.org/10.1017/CBO9780511815676}}
+
+@book{Beck2012,
+	author = {Beck, Mark},
+	date-added = {2023-07-22 21:25:39 -0400},
+	date-modified = {2023-07-22 21:25:46 -0400},
+	publisher = {Oxford University Press, USA},
+	title = {Quantum mechanics: theory and experiment},
+	year = {2012}}
+
+@article{Beau_2012,
+	author = {Mathieu Beau},
+	date-added = {2023-07-22 21:24:26 -0400},
+	date-modified = {2023-07-22 21:24:50 -0400},
+	doi = {10.1088/0143-0807/33/5/1023},
+	journal = {Eur. J. Phys.},
+	note = {\href{https://arxiv.org/abs/1110.2346}{arxiv:1110.2346}},
+	number = {5},
+	pages = {1023--1039},
+	publisher = {{IOP} Publishing},
+	title = {Feynman path integral approach to electron diffraction for one and two slits: analytical results},
+	url = {https://doi.org/10.1088%2F0143-0807%2F33%2F5%2F1023},
+	volume = {33},
+	year = 2012,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0143-0807%2F33%2F5%2F1023},
+	bdsk-url-2 = {https://doi.org/10.1088/0143-0807/33/5/1023}}
+
+@book{Basdevant2005quantum,
+	author = {Basdevant, Jean-Louis and Dalibard, Jean},
+	date-added = {2023-07-22 21:22:43 -0400},
+	date-modified = {2023-07-22 21:22:48 -0400},
+	publisher = {Springer Science \& Business Media},
+	title = {Quantum mechanics},
+	year = {2005}}
+
+@book{Basdevant_2016,
+	author = {Jean-Louis Basdevant},
+	date-added = {2023-07-22 21:22:03 -0400},
+	date-modified = {2023-07-22 21:22:03 -0400},
+	doi = {10.1007/978-3-319-43479-7},
+	publisher = {Springer International Publishing},
+	title = {Lectures on Quantum Mechanics},
+	url = {https://doi.org/10.1007%2F978-3-319-43479-7},
+	year = 2016,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-319-43479-7},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-319-43479-7}}
 
 @book{BjorkenDrell1965,
 	author = {Bjorken, J.D. and Drell, S.D.},
