--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,75 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-22 21:33:35 -0400 
+%% Created for Pete Su at 2023-07-23 08:21:05 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bohr1928,
+	author = {Niels Bohr},
+	date-added = {2023-07-23 08:19:34 -0400},
+	date-modified = {2023-07-23 08:20:45 -0400},
+	doi = {10.1038/121580a0},
+	journal = {Nature},
+	note = {Como Lecture},
+	number = {3050},
+	pages = {580--590},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {The Quantum Postulate and the Recent Development of Atomic Theory1},
+	url = {https://doi.org/10.1038%2F121580a0},
+	volume = {121},
+	year = 1928,
+	bdsk-url-1 = {https://doi.org/10.1038%2F121580a0},
+	bdsk-url-2 = {https://doi.org/10.1038/121580a0}}
+
+@book{Bohm2006,
+	author = {Bohm, David and Hiley, Basil J},
+	date-added = {2023-07-23 08:18:26 -0400},
+	date-modified = {2023-07-23 08:18:33 -0400},
+	publisher = {Routledge},
+	title = {The undivided universe: An ontological interpretation of quantum theory},
+	year = {2006}}
+
+@book{Bohm1951,
+	author = {Bohm, D.},
+	date-added = {2023-07-23 08:14:37 -0400},
+	date-modified = {2023-07-23 08:16:38 -0400},
+	isbn = {9780486659695},
+	lccn = {89031187},
+	note = {Dover Reprint, 1989},
+	publisher = {Pretice Hall},
+	title = {Quantum Theory},
+	url = {https://books.google.com/books?id=-vhCqN2twGQC},
+	year = {1951},
+	bdsk-url-1 = {https://books.google.com/books?id=-vhCqN2twGQC}}
+
+@article{Bocchieri_1978,
+	author = {P. Bocchieri and A. Loinger},
+	date-added = {2023-07-23 08:13:08 -0400},
+	date-modified = {2023-07-23 08:13:12 -0400},
+	doi = {10.1007/bf02896237},
+	journal = {Nuov Cim A},
+	number = {4},
+	pages = {475--482},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Nonexistence of the Aharonov-Bohm effect},
+	url = {https://doi.org/10.1007%2Fbf02896237},
+	volume = {47},
+	year = 1978,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fbf02896237},
+	bdsk-url-2 = {https://doi.org/10.1007/bf02896237}}
+
+@misc{Blau2020,
+	author = {Matthias Blau},
+	date-added = {2023-07-23 08:11:04 -0400},
+	date-modified = {2023-07-23 08:12:13 -0400},
+	howpublished = {Online Notes},
+	note = {\href{http://www.blau.itp.unibe.ch/lecturesPI.pdf}{PDF}},
+	title = {The Path Integral Approach to Quantum Mechanics},
+	year = {2020}}
 
 @article{Bialynicki1996v,
 	author = {Bialynicki-Birula, Iwo},
