--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-23 14:04:09 -0400 
+%% Created for Pete Su at 2023-07-23 14:07:51 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -42,12 +42,13 @@
 	author = {Michael Dickson},
 	booktitle = {{Philosophy of Physics}},
 	date-added = {2023-07-23 13:56:10 -0400},
-	date-modified = {2023-07-23 14:01:34 -0400},
+	date-modified = {2023-07-23 14:07:51 -0400},
 	editor = {Butterfield, Jeremy and Earman, John},
 	isbn = {9780444515605},
 	issn = {0021-9916},
 	note = {\href{http://philsci-archive.pitt.edu/3321/1/nrqt.pdf}{PDF}},
 	pages = {275--415},
+	publisher = {North Holland},
 	title = {{Non-relativistic Quantum Mechanics}},
 	year = {2007},
 	bdsk-url-1 = {https://doi.org/10.1016/B978-044451560-5/50008-7}}
@@ -5530,10 +5531,11 @@ horizon.},
 	abstract = {This chapter discusses the relationship between classical and quantum mechanics. Some remarkable insights of the past few decades have drawn wide attention to the importance of the problem of interpreting quantum mechanics, and in particular of explaining classical physics from it. The chapter emphasizes on the Bohr's correspondence principle concerned with the properties of radiation, rather than with the mechanical orbits themselves. The relationship between consistent histories and decoherence is peculiar: on one hand, decoherence is a natural mechanism through which appropriate sets of histories become (approximately) consistent, but on the other hand these approaches appear to have different points of departure. Bohr's brilliant model of the atom reinforced the idea that quantum theory was a theory of quanta. This model simultaneously highlights the clash between classical and quantum physics and carries the germ of a resolution of this conflict through Bohr's equally brilliant correspondence principle. Considerable progress has been made in the task of identifying at least some (approximately) consistent sets that display (approximate) classical behavior. {\textcopyright} 2007 Elsevier B.V. All rights reserved.},
 	author = {Landsman, N P},
 	booktitle = {{Philosophy of Physics}},
-	date-modified = {2023-07-23 14:02:00 -0400},
+	date-modified = {2023-07-23 14:07:28 -0400},
 	editor = {Butterfield, Jeremy and Earman, John},
 	note = {\href{https://arxiv.org/abs/quant-ph/0506082}{arxiv:quant-ph/0506082}},
 	pages = {417--553},
+	publisher = {North Holland},
 	title = {{Between Classical and Quantum}},
 	year = {2007},
 	bdsk-url-1 = {https://doi.org/10.1016/B978-044451560-5/50008-7}}
