--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-23 16:41:19 -0400 
+%% Created for Pete Su at 2023-07-23 16:43:56 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Echeverria1999,
+	author = {Echeverria-Enriquez, Arturo and Munoz-Lecanda, Miguel C and Rom{\'a}n-Roy, Narciso and Victoria-Monge, Carles},
+	date-added = {2023-07-23 16:43:22 -0400},
+	date-modified = {2023-07-23 16:43:56 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/math-ph/9904008}{arxiv:math-ph/9904008}},
+	title = {Mathematical foundations of geometric quantization},
+	year = {1999}}
+
+@book{Duncan2019,
+	author = {Duncan, Anthony and Janssen, Michel},
+	date-added = {2023-07-23 16:42:38 -0400},
+	date-modified = {2023-07-23 16:42:45 -0400},
+	publisher = {Oxford University Press},
+	title = {Constructing Quantum Mechanics: Volume 1: The Scaffold: 1900-1923},
+	year = {2019}}
 
 @article{Dirac1928b,
 	author = {Dirac, Paul Adrien Maurice},
