--- a/gr-qc-9706069/gr-qc-9706069.tex
+++ b/gr-qc-9706069/gr-qc-9706069.tex
@@ -289,7 +289,7 @@ provided by the K\"ahler structure.  Roughly speaking, features of
 quantum mechanics which have direct classical analogues refer only to
 the symplectic structure.  On the other hand, features---such as
 quantum uncertainties and state vector reduction in a measurement
-process---refer also the Riemannian metric. This neat division lies at
+process---also refer to the Riemannian metric. This neat division lies at
 the heart of the structural similarities and differences between the
 (mathematical frameworks underlying the) two theories.
 
@@ -383,7 +383,7 @@ is only to provide a thorough overview of the subject.
 
 This work was intended to be an extension of a paper by Kibble
 {}\cite{kibble} which pointed out that the Schr\"odinger evolution can
-be regarded as an Hamiltonian flow on $\H$. However, after completing
+be regarded as a Hamiltonian flow on $\H$. However, after completing
 this work, we learned that many of the results contained in sections
 \ref{sec2} and \ref{sec3.B} were obtained independently by others
 (although the viewpoints and technical proofs are often distinct.)  In
@@ -391,7 +391,7 @@ this work, we learned that many of the results contained in sections
 symplectic formulation in which the phase space is the projective
 Hilbert space. That discussion was, however, restricted to the
 finite-dimensional case and did not include a discussion of the role
-of the metric, probabilistic interpretation and quantum uncertainties.
+of the metric, probabilistic interpretation or quantum uncertainties.
 Anandan and Aharonov \cite{anandan} rediscovered some of these results
 and also discussed some of the probabilistic aspects. This work was
 also restricted to finite-dimensional systems and focussed on the
