--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-23 17:07:19 -0400 
+%% Created for Pete Su at 2023-07-23 21:57:15 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Harvey1999,
+	date-added = {2023-07-23 21:56:57 -0400},
+	date-modified = {2023-07-23 21:57:15 -0400},
+	doi = {10.1007/978-1-4612-1422-9},
+	editor = {Alex Harvey},
+	publisher = {Springer New York},
+	title = {On Einstein's Path},
+	url = {https://doi.org/10.1007%2F978-1-4612-1422-9},
+	year = 1999,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-1-4612-1422-9},
+	bdsk-url-2 = {https://doi.org/10.1007/978-1-4612-1422-9}}
 
 @article{Echeverria1999,
 	author = {Echeverria-Enriquez, Arturo and Munoz-Lecanda, Miguel C and Rom{\'a}n-Roy, Narciso and Victoria-Monge, Carles},
