--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-23 21:57:15 -0400 
+%% Created for Pete Su at 2023-07-24 07:55:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -779,11 +779,12 @@
 	title = {Is Quantum Mechanics An Island in Theoryspace},
 	year = {2004}}
 
-@book{Schroeck2013quantum,
+@book{Schroeck2013,
 	author = {Schroeck Jr, Franklin E},
 	date-added = {2023-07-21 14:27:30 -0400},
-	date-modified = {2023-07-21 14:27:34 -0400},
+	date-modified = {2023-07-24 07:55:40 -0400},
 	publisher = {Springer Science \& Business Media},
+	series = {Fundamental Theories of Physics },
 	title = {Quantum mechanics on phase space},
 	volume = {74},
 	year = {2013}}
