--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,149 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-24 08:21:21 -0400 
+%% Created for Pete Su at 2023-07-24 20:08:42 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Feynman2005a,
+	author = {Feynman, Richard Phillips and Hibbs, Albert R and Styer, Daniel F},
+	date-added = {2023-07-24 20:08:01 -0400},
+	date-modified = {2023-07-24 20:08:10 -0400},
+	publisher = {Dover Publications},
+	title = {Quantum mechanics and path integrals: Emended edition},
+	year = {2005}}
+
+@book{Feynman2005,
+	date-added = {2023-07-24 20:04:33 -0400},
+	date-modified = {2023-07-24 20:07:35 -0400},
+	editor = {Laurie Brown},
+	publisher = {World Scientific},
+	title = {Feynman's thesis: a new approach to quantum theory},
+	year = {2005}}
+
+@article{Feynman1948,
+	author = {Feynman, R. P.},
+	date-added = {2023-07-24 20:03:41 -0400},
+	date-modified = {2023-07-24 20:03:49 -0400},
+	doi = {10.1103/RevModPhys.20.367},
+	issue = {2},
+	journal = {Rev. Mod. Phys.},
+	month = {Apr},
+	numpages = {0},
+	pages = {367--387},
+	publisher = {American Physical Society},
+	title = {Space-Time Approach to Non-Relativistic Quantum Mechanics},
+	url = {https://link.aps.org/doi/10.1103/RevModPhys.20.367},
+	volume = {20},
+	year = {1948},
+	bdsk-url-1 = {https://link.aps.org/doi/10.1103/RevModPhys.20.367},
+	bdsk-url-2 = {https://doi.org/10.1103/RevModPhys.20.367}}
+
+@book{Feynman2006qed,
+	author = {Feynman, Richard Phillips},
+	date-added = {2023-07-24 20:02:37 -0400},
+	date-modified = {2023-07-24 20:02:45 -0400},
+	publisher = {Princeton University Press},
+	title = {QED: The strange theory of light and matter},
+	year = {2006}}
+
+@article{Ferrari_2010,
+	author = {Christian Ferrari and Bernd Braunecker},
+	date-added = {2023-07-24 20:01:33 -0400},
+	date-modified = {2023-07-24 20:02:10 -0400},
+	doi = {10.1119/1.3369921},
+	journal = {American Journal of Physics},
+	note = {\href{https://arxiv.org/abs/0911.2072}{arxiv:0911.2072}},
+	number = {8},
+	pages = {792--795},
+	publisher = {American Association of Physics Teachers ({AAPT})},
+	title = {Entanglement, which-way measurements, and a quantum erasure},
+	url = {https://doi.org/10.1119%2F1.3369921},
+	volume = {78},
+	year = 2010,
+	bdsk-url-1 = {https://doi.org/10.1119%2F1.3369921},
+	bdsk-url-2 = {https://doi.org/10.1119/1.3369921}}
+
+@book{Feynman1998,
+	author = {Feynman, Richard P},
+	date-added = {2023-07-24 19:59:41 -0400},
+	date-modified = {2023-07-24 20:00:31 -0400},
+	publisher = {Westview Press},
+	series = {Advanced Book Classics},
+	title = {Quantum electrodynamics},
+	volume = {3},
+	year = {1998}}
+
+@book{faddeev1991,
+	author = {Faddeev, Ljudvig D},
+	date-added = {2023-07-24 19:55:58 -0400},
+	date-modified = {2023-07-24 19:56:11 -0400},
+	publisher = {CRC Press},
+	title = {Gauge fields: an introduction to quantum theory},
+	year = {1991}}
+
+@book{Esposito2004,
+	author = {Esposito, Giampiero and Marmo, Giuseppe and Sudarshan, George},
+	date-added = {2023-07-24 19:54:43 -0400},
+	date-modified = {2023-07-24 19:55:21 -0400},
+	publisher = {Cambridge University Press},
+	title = {{From Classical to Quantum Mechanics: An Introduction to the Formalism, Foundations and Applications}},
+	year = {2004}}
+
+@article{EinsteinEPR,
+	author = {Einstein, Albert and Podolsky, Boris and Rosen, Nathan},
+	date-added = {2023-07-24 19:53:18 -0400},
+	date-modified = {2023-07-24 19:53:58 -0400},
+	journal = {Physical Review},
+	number = {10},
+	pages = {777--780},
+	publisher = {APS},
+	title = {{Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?}},
+	volume = {47},
+	year = {1935}}
+
+@article{EinsteinPhoton1965,
+	author = {Arons, Arnold B and Peppard, MB},
+	date-added = {2023-07-24 19:52:33 -0400},
+	date-modified = {2023-07-24 19:52:47 -0400},
+	journal = {American Journal of Physics},
+	number = {5},
+	pages = {367--374},
+	publisher = {American Association of Physics Teachers},
+	title = {Einstein's Proposal of the Photon Concept---a Translation of the Annalen der Physik Paper of 1905},
+	volume = {33},
+	year = {1965}}
+
+@article{Einstein1917,
+	author = {Einstein, Albert},
+	date-added = {2023-07-24 19:50:59 -0400},
+	date-modified = {2023-07-24 19:51:56 -0400},
+	journal = {Phys Zeit},
+	pages = {121},
+	title = {{Zur quantentheorie der strahlung (The Quantum Theory of Radiation)}},
+	volume = {18},
+	year = {1917}}
+
+@article{Eichmann1993,
+	author = {Eichmann, U. and Bergquist, J. C. and Bollinger, J. J. and Gilligan, J. M. and Itano, W. M. and Wineland, D. J. and Raizen, M. G.},
+	date-added = {2023-07-24 19:43:49 -0400},
+	date-modified = {2023-07-24 19:43:58 -0400},
+	doi = {10.1103/PhysRevLett.70.2359},
+	issue = {16},
+	journal = {Phys. Rev. Lett.},
+	month = {Apr},
+	numpages = {0},
+	pages = {2359--2362},
+	publisher = {American Physical Society},
+	title = {Young's interference experiment with light scattered from two atoms},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.70.2359},
+	volume = {70},
+	year = {1993},
+	bdsk-url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.70.2359},
+	bdsk-url-2 = {https://doi.org/10.1103/PhysRevLett.70.2359}}
 
 @book{DerWaerden1968,
 	author = {Van Der Waerden, Bartel Leendert},
@@ -1573,10 +1710,10 @@
 	bdsk-url-1 = {https://doi.org/10.1216%2Frmj-2012-42-2-353},
 	bdsk-url-2 = {https://doi.org/10.1216/rmj-2012-42-2-353}}
 
-@book{fFeyd1964abelian,
+@book{Feyd1964abelian,
 	author = {Freyd, Peter J},
 	date-added = {2023-07-17 07:09:42 -0400},
-	date-modified = {2023-07-17 07:11:02 -0400},
+	date-modified = {2023-07-24 20:00:40 -0400},
 	note = {\href{http://tac.mta.ca/tac/reprints/articles/3/tr3abs.html}{Reprint}},
 	publisher = {Harper \& Row New York},
 	title = {Abelian categories},
