--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-26 07:27:41 -0400 
+%% Created for Pete Su at 2023-07-26 07:32:57 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -1069,10 +1069,10 @@
 @article{Aaronson2004,
 	author = {Scott Aaronson},
 	date-added = {2023-07-21 14:31:13 -0400},
-	date-modified = {2023-07-21 14:31:59 -0400},
+	date-modified = {2023-07-26 07:32:57 -0400},
 	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/quant-ph/0401062}{arxiv:quant-ph/0401062}},
-	title = {Is Quantum Mechanics An Island in Theoryspace},
+	title = {{Is Quantum Mechanics An Island in Theoryspace}},
 	year = {2004}}
 
 @book{Schroeck1996,
