--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-26 07:32:57 -0400 
+%% Created for Pete Su at 2023-07-26 07:34:06 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -4512,13 +4512,14 @@
 	author = {Ellis, John and Gaillard, Mary K. and Nanopoulos, Dimitri V.},
 	booktitle = {The standard theory of particle physics: Essays to celebrate CERN's 60th anniversary},
 	date-added = {2019-03-12 08:06:22 -0400},
-	date-modified = {2019-03-12 08:06:55 -0400},
+	date-modified = {2023-07-26 07:34:06 -0400},
 	doi = {10.1142/9789814733519_0014},
 	editor = {Maiani, Luciano and Rolandi, Luigi},
 	eprint = {1504.07217},
 	note = {\href{https://arxiv.org/abs/1504.07217}{arxiv:1504.07217}},
 	pages = {255-274},
 	primaryclass = {hep-ph},
+	publisher = {World Scientific},
 	reportnumber = {KCL-PH-TH-2015-20, LCTS-2015-10, CERN-PH-TH-2015-098},
 	slaccitation = {%%CITATION = ARXIV:1504.07217;%%},
 	title = {{An Updated Historical Profile of the Higgs Boson}},
