--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-26 07:34:06 -0400 
+%% Created for Pete Su at 2023-07-26 10:08:18 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Penington2020,
+	author = {Geoffrey Penington},
+	date-added = {2023-07-26 10:04:40 -0400},
+	date-modified = {2023-07-26 10:05:25 -0400},
+	doi = {10.1007/jhep09(2020)002},
+	journal = {J. High Energ. Phys.},
+	note = {\href{https://arxiv.org/abs/1905.08255}{arxiv:1905.08255}},
+	number = {9},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Entanglement wedge reconstruction and the information paradox},
+	url = {https://doi.org/10.1007%2Fjhep09%282020%29002},
+	volume = {2020},
+	year = 2020,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep09%282020%29002},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep09(2020)002}}
 
 @article{Giacosa_2017,
 	author = {F. Giacosa},
@@ -2128,8 +2144,9 @@
 	author = {Baez, John C. and Shulman, Michael},
 	copyright = {Assumed arXiv.org perpetual, non-exclusive license to distribute this article for submissions made before January 2004},
 	date-added = {2023-07-15 16:34:49 -0400},
-	date-modified = {2023-07-15 16:35:37 -0400},
+	date-modified = {2023-07-26 10:01:22 -0400},
 	doi = {10.48550/ARXIV.MATH/0608420},
+	journal = {arXiv},
 	keywords = {Category Theory (math.CT), FOS: Mathematics, FOS: Mathematics, 18G99 (Primary), 18D05, 18B25, 20JXX, 55S45 (Secondary)},
 	note = {\href{https://arxiv.org/abs/math/0608420}{arxiv:math/0608420}},
 	publisher = {arXiv},
@@ -2928,18 +2945,6 @@
 	year = {2006},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevLett.96.181602}}
 
-@article{Penington:2019npb,
-	archiveprefix = {arXiv},
-	author = {Penington, Geoffrey},
-	date-added = {2019-11-20 08:36:20 -0500},
-	date-modified = {2019-11-20 08:37:05 -0500},
-	eprint = {1905.08255},
-	note = {\href{https://arxiv.org/abs/1905.08255}{arxiv:1905.08255}},
-	primaryclass = {hep-th},
-	slaccitation = {%%CITATION = ARXIV:1905.08255;%%},
-	title = {{Entanglement Wedge Reconstruction and the Information Paradox}},
-	year = {2019}}
-
 @article{Dong:2016eik,
 	archiveprefix = {arXiv},
 	author = {Dong, Xi and Harlow, Daniel and Wall, Aron C.},
@@ -2993,11 +2998,11 @@
 	bdsk-url-1 = {https://doi.org/10.1142/9789813149441_0005}}
 
 @article{Carroll:2017BB,
-	archiveprefix = {arXiv},
 	author = {Carroll, Sean M.},
 	date-added = {2019-09-29 07:52:54 -0400},
-	date-modified = {2019-09-29 07:53:39 -0400},
+	date-modified = {2023-07-26 10:01:57 -0400},
 	eprint = {1702.00850},
+	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1702.00850}{arxiv:1702.00850}},
 	primaryclass = {hep-th},
 	reportnumber = {CALT-2017-004},
@@ -3242,7 +3247,8 @@
 	author = {Mart{\'\i}n Escard{\'o}},
 	booktitle = {Electron. Notes Theor. Comput. Sci},
 	date-added = {2019-09-04 07:27:41 -0400},
-	date-modified = {2019-09-14 11:40:21 -0400},
+	date-modified = {2023-07-26 10:02:13 -0400},
+	journal = {arXiv},
 	note = {\href{https://www.cs.bham.ac.uk/~mhe/papers/pittsburgh.pdf}{Download here}},
 	publisher = {Unpublished},
 	title = {Topology via higher-order intuitionistic logic},
@@ -3853,11 +3859,11 @@
 	bdsk-url-2 = {https://doi.org/10.1142/7038}}
 
 @article{Fewster:2019ixc,
-	archiveprefix = {arXiv},
 	author = {Fewster, Christopher J. and Rejzner, Kasia},
 	date-added = {2019-07-12 07:50:19 -0400},
-	date-modified = {2019-07-12 07:51:00 -0400},
+	date-modified = {2023-07-26 10:02:42 -0400},
 	eprint = {1904.04051},
+	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1904.04051}{https://arxiv:1904.04051}},
 	primaryclass = {hep-th},
 	slaccitation = {%%CITATION = ARXIV:1904.04051;%%},
@@ -3984,8 +3990,9 @@
 	archiveprefix = {arXiv},
 	author = {Yonekura, Kazuya},
 	date-added = {2019-07-05 22:18:51 -0400},
-	date-modified = {2019-07-05 22:19:25 -0400},
+	date-modified = {2023-07-26 10:08:18 -0400},
 	eprint = {1807.05399},
+	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1807.05399}{arxiv:1807.05399}},
 	primaryclass = {hep-th},
 	slaccitation = {%%CITATION = ARXIV:1807.05399;%%},
@@ -4135,8 +4142,9 @@
 	archiveprefix = {arXiv},
 	author = {Wells, James D.},
 	date-added = {2019-06-20 06:52:04 -0400},
-	date-modified = {2019-06-20 06:52:35 -0400},
+	date-modified = {2023-07-26 10:07:33 -0400},
 	eprint = {1609.04268},
+	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1609.04268v1}{arxiv:1609.04268v1}},
 	primaryclass = {physics.hist-ph},
 	reportnumber = {DESY-16-176, MCTP-16-20},
@@ -4382,8 +4390,9 @@
 	archiveprefix = {arXiv},
 	author = {Van Raamsdonk, Mark},
 	date-added = {2019-03-15 12:58:24 -0400},
-	date-modified = {2019-03-15 12:58:50 -0400},
+	date-modified = {2023-07-26 10:07:07 -0400},
 	eprint = {0907.2939},
+	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/0907.2939}{arxiv:0907.2939}},
 	primaryclass = {hep-th},
 	slaccitation = {%%CITATION = ARXIV:0907.2939;%%},
@@ -4652,11 +4661,11 @@
 	bdsk-url-1 = {https://doi.org/10.1007/978-1-4419-8267-4}}
 
 @article{Robinson:2008ie,
-	archiveprefix = {arXiv},
 	author = {Robinson, Matthew B. and Bland, Karen R. and Cleaver, Gerald B. and Dittmann, Jay R.},
 	date-added = {2019-03-10 08:24:33 -0400},
-	date-modified = {2019-03-10 08:25:05 -0400},
+	date-modified = {2023-07-26 10:03:34 -0400},
 	eprint = {0810.3328},
+	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/0810.3328}{arxiv:0810.3328}},
 	primaryclass = {hep-th},
 	reportnumber = {BU-HEPP-08-20},
@@ -4735,8 +4744,9 @@
 	archiveprefix = {arXiv},
 	author = {Vaidman, Lev},
 	date-added = {2019-03-09 15:32:33 -0500},
-	date-modified = {2019-03-09 15:32:54 -0500},
+	date-modified = {2023-07-26 10:06:51 -0400},
 	eprint = {quant-ph/9609006},
+	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/quant-ph/9609006}{arxiv:9609006}},
 	primaryclass = {quant-ph},
 	reportnumber = {TAUP-2058-93},
@@ -5061,8 +5071,9 @@ horizon.},
 	archiveprefix = {arXiv},
 	author = {Strominger, Andrew},
 	date-added = {2019-03-03 11:39:01 -0500},
-	date-modified = {2019-03-03 11:39:41 -0500},
+	date-modified = {2023-07-26 10:06:27 -0400},
 	eprint = {1706.07143},
+	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1706.07143}{arxiv:1706.07143}},
 	primaryclass = {hep-th},
 	slaccitation = {%%CITATION = ARXIV:1706.07143;%%},
@@ -5236,12 +5247,12 @@ horizon.},
 	bdsk-url-1 = {https://doi.org/10.1090/conm/214}}
 
 @article{Boughn2018Story,
-	archiveprefix = {arXiv},
 	author = {{Boughn}, Stephen},
 	date-added = {2019-02-24 18:21:01 +0000},
-	date-modified = {2019-02-24 18:22:41 +0000},
+	date-modified = {2023-07-26 10:01:38 -0400},
 	eid = {arxiv:1801.06196},
 	eprint = {1801.06196},
+	journal = {arXiv},
 	keywords = {Physics - History and Philosophy of Physics, Quantum Physics},
 	note = {\href{https://arxiv.org/abs/1801.06196}{arxiv:1801.06196}},
 	primaryclass = {physics.hist-ph},
@@ -5536,11 +5547,11 @@ horizon.},
 	bdsk-url-1 = {https://doi.org/10.1007/JHEP06(2016)025}}
 
 @article{Mack:2018fny,
-	archiveprefix = {arXiv},
 	author = {Mack, Katherine J. and McNees, Robert},
 	date-added = {2019-02-15 14:36:36 +0000},
-	date-modified = {2019-02-15 14:37:33 +0000},
+	date-modified = {2023-07-26 10:02:58 -0400},
 	eprint = {1809.05089},
+	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1809.05089}{arxiv:1809.05089}},
 	primaryclass = {hep-ph},
 	slaccitation = {%%CITATION = ARXIV:1809.05089;%%},
