--- a/bib.bib
+++ b/bib.bib
@@ -1,20 +1,47 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-26 20:37:29 -0400 
+%% Created for Pete Su at 2023-07-26 21:31:53 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@book{Heunen_2019,
+	author = {Chris Heunen and Jamie Vicary},
+	date-added = {2023-07-26 21:30:06 -0400},
+	date-modified = {2023-07-26 21:30:13 -0400},
+	doi = {10.1093/oso/9780198739623.001.0001},
+	publisher = {Oxford University {PressOxford}},
+	title = {Categories for Quantum Theory},
+	url = {https://doi.org/10.1093%2Foso%2F9780198739623.001.0001},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1093%2Foso%2F9780198739623.001.0001},
+	bdsk-url-2 = {https://doi.org/10.1093/oso/9780198739623.001.0001}}
+
+@book{Helstrom1976,
+	author = {Carl Helstrom},
+	date-added = {2023-07-26 21:28:25 -0400},
+	date-modified = {2023-07-26 21:28:49 -0400},
+	publisher = {Academic Press},
+	title = {Quantum Detection and Estimation Theory},
+	year = {1976}}
+
+@book{Heller2018,
+	author = {Heller, Eric J},
+	date-added = {2023-07-26 21:24:37 -0400},
+	date-modified = {2023-07-26 21:24:44 -0400},
+	publisher = {Princeton University Press},
+	title = {The semiclassical way to dynamics and spectroscopy},
+	year = {2018}}
+
 @article{Hanson_2007,
 	author = {R. Hanson and L. P. Kouwenhoven and J. R. Petta and S. Tarucha and L. M. K. Vandersypen},
 	date-added = {2023-07-26 20:37:04 -0400},
-	date-modified = {2023-07-26 20:37:29 -0400},
+	date-modified = {2023-07-26 21:30:29 -0400},
 	doi = {10.1103/revmodphys.79.1217},
 	journal = {Rev. Mod. Phys.},
-	month = {oct},
 	note = {\href{https://arxiv.org/abs/cond-mat/0610433}{arxiv:cond-mat/0610433}},
 	number = {4},
 	pages = {1217--1265},
@@ -263,11 +290,10 @@
 @article{Feynman1948,
 	author = {Feynman, R. P.},
 	date-added = {2023-07-24 20:03:41 -0400},
-	date-modified = {2023-07-24 20:03:49 -0400},
+	date-modified = {2023-07-26 21:31:40 -0400},
 	doi = {10.1103/RevModPhys.20.367},
 	issue = {2},
 	journal = {Rev. Mod. Phys.},
-	month = {Apr},
 	numpages = {0},
 	pages = {367--387},
 	publisher = {American Physical Society},
@@ -366,11 +392,10 @@
 @article{Eichmann1993,
 	author = {Eichmann, U. and Bergquist, J. C. and Bollinger, J. J. and Gilligan, J. M. and Itano, W. M. and Wineland, D. J. and Raizen, M. G.},
 	date-added = {2023-07-24 19:43:49 -0400},
-	date-modified = {2023-07-24 19:43:58 -0400},
+	date-modified = {2023-07-26 21:31:36 -0400},
 	doi = {10.1103/PhysRevLett.70.2359},
 	issue = {16},
 	journal = {Phys. Rev. Lett.},
-	month = {Apr},
 	numpages = {0},
 	pages = {2359--2362},
 	publisher = {American Physical Society},
@@ -522,10 +547,9 @@
 @article{Dimitrova_2008,
 	author = {T. L. Dimitrova and A. Weis},
 	date-added = {2023-07-23 14:03:24 -0400},
-	date-modified = {2023-07-23 14:03:24 -0400},
+	date-modified = {2023-07-26 21:31:53 -0400},
 	doi = {10.1119/1.2815364},
 	journal = {American Journal of Physics},
-	month = {feb},
 	number = {2},
 	pages = {137--142},
 	publisher = {American Association of Physics Teachers ({AAPT})},
